fix margin on mobile

--- a/style.css
+++ b/style.css
@@ -158,7 +158,8 @@ li a:hover {
     transform: translate(-50%, -50%);
     z-index: 2;
     width: 70%;
-    padding: 20px;
+    padding: 10px;
+    margin-top: 60px;
     text-align: center;
   }
 
